correcting letter spacing on home

--- a/app/preprocessor/main.scss
+++ b/app/preprocessor/main.scss
@@ -510,6 +510,7 @@ $swift-ease-in-out-timing-function: cubic-bezier(0.35, 0, 0.25, 1);
 #next-page-text {
     position: relative;
     width: calc(100% - 23px);
+    letter-spacing: 0.03em;
     top: 0;
     margin-left: 20px;
     float: left;
